Add content to the home page

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,5 +1,9 @@
-<style>
-</style>
-<div class="home-content">
-Slammo - Work In Progress
+<div class="jumbotron">
+  <h2 class="text-center">Slammo</h2>
+  <h3 class="text-center">Gotham Girls Roller Derby</h3>
+  <div id='next_bout'>
+    <p class="text-center">Next Bout</p>
+    <div><p class="text-center"><strong>Team 1</strong> vs <strong>Team 2</strong></p></div>
+  </div>
+  <div><a href="#/team" class="btn btn-default">Create a Team</a></div>
 </div>
