Create the nextBout rails api

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -3,7 +3,7 @@
   <h3 class="text-center">Gotham Girls Roller Derby</h3>
   <div id='next_bout'>
     <p class="text-center">Next Bout</p>
-    <div><p class="text-center"><strong>Team 1</strong> vs <strong>Team 2</strong></p></div>
+    <div><p class="text-center"><strong>{{nextBout.team1}}</strong> vs <strong>{{nextBout.team2}}</strong></p></div>
   </div>
   <div><a href="#/team" class="btn btn-default">Create a Team</a></div>
 </div>
