Have button link to draft page

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -5,5 +5,5 @@
     <p class="text-center">Next Bout</p>
     <div><p class="text-center"><strong>{{nextBout.team1}}</strong> vs <strong>{{nextBout.team2}}</strong></p></div>
   </div>
-  <div><a href="#/team" class="btn btn-default">Create a Team</a></div>
+  <div><a href="#/draft" class="btn btn-default">Create a Team</a></div>
 </div>
